SFDCProject/src/objects/TermsConditions__c.object
<CustomObject>
    <description>Terms and Conditions</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Status of Terms and Conditions</description>
        <inlineHelpText>Status of Terms and Conditions</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>Date on which Terms and Conditions become inactive</description>
        <inlineHelpText>Date on which Terms and Conditions become inactive</inlineHelpText>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SeqNo__c</fullName>
        <description>Sequence Number to identify the multiple entries for Terms and Conditions for a specific Type.</description>
        <inlineHelpText>Sequence Number to identify the multiple entries for Terms and Conditions for a specific Type.</inlineHelpText>
        <label>SeqNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Date on which Terms and Conditions became effective</description>
        <inlineHelpText>Date on which Terms and Conditions became effective</inlineHelpText>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TermsConditionsInfo__c</fullName>
        <description>Terms and Conditions</description>
        <inlineHelpText>Terms and Conditions</inlineHelpText>
        <label>TermsConditionsInfo</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TermsConditionsType__c</fullName>
        <description>The type of Terms and Conditions</description>
        <inlineHelpText>The type of Terms and Conditions</inlineHelpText>
        <label>TermsConditionsType</label>
        <picklist>
            <picklistValues>
                <fullName>AEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARTNER</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>TermsConditions</label>
    <nameField>
        <label>TermsConditions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TermsConditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>